--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title>SByC - Investigating Specialization by Constraint</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<base href="http://blambeau.github.com/blambeau/sbyc/"/>
+		<base href="http://blambeau.github.com/sbyc/"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/menu.css" />
 		<link rel="stylesheet" type="text/css" href="css/coderay.css" />
