--- a/codetree/rewriting.html
+++ b/codetree/rewriting.html
@@ -10,16 +10,39 @@
 	</head>
 	<body>
 	  <div id="header">
-	    <span>SByC on</span>
-	    <a href="http://rdoc.info/blambeau/sbyc">rdoc.info</a>
-	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
+	    <div class="left">
+	      This feature is part of <a href="index.html">SByC</a>
+	    </div>
+	    <div class="right">
+  	    <span>SByC on</span>
+  	    <a href="http://rdoc.info/blambeau/sbyc">rdoc.info</a>
+  	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
+  	  </div>
 	  </div>
 	  <div id="main">
       <h1>CodeTree - Rewriting</h1>
-      
+      <ul id="menu">
+        <li><a href="codetree.html">Home</a></li>
+        <li><a href="codetree/evaluation.html">Evaluation</a></li>
+        <li><a href="codetree/codegen.html">Code generation</a></li>
+        <li><a href="codetree/production.html">Production</a></li>
+        <li><a href="codetree/rewriting.html">Rewriting</a></li>
+
+      </ul>
       <div class="text">
 
       </div>
   	</div>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-16520635-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
 	</body>
 </html>
