--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
 	</head>
 	<body>
 	  <div id="header">
-	    <span>SByC on</span>
-	    <a href="http://rdoc.info/blambeau/sbyc">rdoc.info</a>
-	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
+	    <div class="left">
+	      This feature is part of <a href="index.html">SByC</a>
+	    </div>
+	    <div class="right">
+  	    <span>SByC on</span>
+  	    <a href="http://rdoc.info/blambeau/sbyc">rdoc.info</a>
+  	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
+  	  </div>
 	  </div>
 	  <div id="main">
       <h1>SByC - Investigating Specialization by Constraint</h1>
       <ul id="menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="codetree.html">CodeTree</a></li>
+        <li><a href="codetree.html">Code Tree</a></li>
 
       </ul>
-
       <div class="text">
 <h2>synopsis</h2>
 <p>SByC is an investigation about Specialization by Constraint as an alternative to common type systems that we found in (object-oriented) programming languages. The library is written as a collection of Ruby tools described below. Those tools are in fact sub-gems of SByC that can often be used in isolation.</p>
@@ -40,7 +44,20 @@ code.ruby_code(<span class="s"><span class="dl">'</span><span class="k">scope</s
 </div>
 
 <p><a href="codetree.html">Read more about CodeTree</a></p>
+<h2>credits</h2>
+<p>SByC &#169; 2010 by Bernard Lambeau. SByC is distributed under the <span class="caps">MIT</span> licence. Please see the <span class="caps">LICENCE</span>.md document for details.</p>
       </div>
   	</div>
+    <script type="text/javascript">
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-16520635-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
 	</body>
 </html>
