--- a/codetree/rewriting.html
+++ b/codetree/rewriting.html
@@ -3,7 +3,7 @@
 	<head> 
 		<title>SByC - Investigating Specialization by Constraint</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<base href="http://blambeau.github.com/sbyc/"/>
+		<base href="http://localhost/~blambeau/sbyc/"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		<link rel="stylesheet" type="text/css" href="css/menu.css" />
 		<link rel="stylesheet" type="text/css" href="css/coderay.css" />
@@ -21,14 +21,16 @@
 	  </div>
 	  <div id="main">
       <h1>CodeTree - Rewriting</h1>
-      <ul id="menu">
-        <li><a href="codetree.html">Home</a></li>
-        <li><a href="codetree/evaluation.html">Evaluation</a></li>
-        <li><a href="codetree/codegen.html">Code generation</a></li>
-        <li><a href="codetree/production.html">Production</a></li>
-        <li><a href="codetree/rewriting.html">Rewriting</a></li>
+      <div id="menu_wrapper" class="black">
+        <ul id="menu">
+          <li ><a href="codetree.html">Home</a></li>
+          <li ><a href="codetree/evaluation.html">Evaluation</a></li>
+          <li ><a href="codetree/codegen.html">Code generation</a></li>
+          <li ><a href="codetree/production.html">Production</a></li>
+          <li class="active"><a href="codetree/rewriting.html">Rewriting</a></li>
 
-      </ul>
+        </ul>
+      </div>
       <div class="text">
 
       </div>
