--- a/codetree.html
+++ b/codetree.html
@@ -34,7 +34,7 @@
 <h2>synopsis</h2>
 <p>This part of SByC provides a safe, reusable, extensible, mashallable, and non-intrusive (no monkey patching of Ruby core classes) implementation of block expressions. Block expressions are parsed using a generic <span class="caps">DSL</span> and converted to a parse tree, which may be analyzed, rewrited, compiled, and so on. The following example illustrates typical usage of CodeTree::parse.</p>
 <div class="CodeRay">
-  <div class="code"><pre>code = <span class="co">CodeTree</span><span class="sy">:parse</span>{ x &gt; <span class="i">10</span> &amp; y &lt; <span class="i">20</span> }   
+  <div class="code"><pre>code = <span class="co">CodeTree</span>::parse{ x &gt; <span class="i">10</span> &amp; y &lt; <span class="i">20</span> }   
 <span class="c"># =&gt; (&amp; (&gt; x, 10), (&lt; y, 20))</span>
 
 <span class="c"># See the evaluation section for details</span>
