--- a/codetree.html
+++ b/codetree.html
@@ -15,7 +15,7 @@
 	    </div>
 	    <div class="right">
   	    <span>SByC on</span>
-  	    <a href="http://rdoc.info/blambeau/sbyc">rdoc.info</a>
+  	    <a href="http://rdoc.info/projects/blambeau/sbyc">rdoc.info</a>
   	    <a href="http://github.com/blambeau/sbyc">GitHub</a>
   	  </div>
 	  </div>
